{
  "actions": {
    "back": "Back",
    "cancel": "Cancel",
    "continue": "Continue",
    "or": "or",
    "save": "Save"
  },
  "fields": {
    "email": "Email",
    "password": "Password"
...
